1.7.2
- fixed quoting engine path when exporting to shell script
- fixed quoting additional command line arguments containing a file path

1.7.1
- fixed automatic adaptation to Windows 10 theme settings
- fixed reporting directories as errors where directories are allowed
- fixed losing IWAD/config/save/demo file selection when closing Initial Setup dialog

1.7
- added explicit dark and light theme
- allowed to select different storage for different option groups
- improved tooltips for launch/multiplayer/gameplay/compatibility/output options
- highlighting missing files and directories with red text
- reorganized the JSON structure of options.json (old ones remain backward compatible)
- fixed crash when clicking on a map file that is not a WAD

1.6.5
- reduced CPU usage by resizing map dir view column only when necessary
- workaround to prevent losing IWAD/map/config/save/demo selection when launching engine with output window enabled
- workaround for unintuitive Windows executable search order to allow launching engine from subfolders when equally named engine in DoomRunner's folder exists
- added support for Strife Veteran Edition

1.6.4
- removed special characters from paths derived from Preset names
- prevented using +screenshot_dir and -stdout for engines that don't support it
- save options.json to %appdata% if the current directory is not writable
- workaround for freezing file dialogs on some Linux desktop environments
- prevented showing "doesn't exist" warning when a path is empty (not set)
- fixed compatbility level "out of bounds" error when restoring with no engine selected
- fixed switching relative/absolute paths for selected map packs

1.6.3
- fixed the "Show FPS" checkbox not restoring previous value after restarting the launcher
- fixed the compatibility level not reseting correctly when the "Save globally" setting is used

1.6.2
- fixed the bug from 1.6 where options.json was not created on first run
- support for launching SIGIL maps (E5MX)
