@@ -1,6 +1,7 @@
 1.7.2
 - fixed quoting engine path when exporting to shell script
 - fixed quoting additional command line arguments containing a file path
+- fixed mistakenly saving options.json into engine directory when using engine's output window
 
 1.7.1
 - fixed automatic adaptation to Windows 10 theme settings
